Implementa variação de inputs

--- a/css/forms.css
+++ b/css/forms.css
@@ -25,3 +25,12 @@
     background-color: rgb(70, 65, 65);
     color: #ffffff;
 }
+
+.menssage-error{
+    color: var(--button-danger-bg);
+    font-weight: bolder;
+}
+
+.input-error{
+    border: 1px solid var(--button-danger-bg) !important;
+}
