--- a/css/perfil.css
+++ b/css/perfil.css
@@ -35,6 +35,10 @@ body{
     align-items: center;
 }
 
+.button{
+    float: none;
+}
+
 #edit-form{
     width: 40vw;
     flex-grow: 1;
@@ -44,7 +48,6 @@ body{
     width: 40vw;
     flex-grow: 1;
     display: none;
-    opacity: 0;
     margin-top: 15px;
     transition: opacity 8s;
     
@@ -60,7 +63,7 @@ body{
     flex-grow: 1;
 }
 
-label[for=endereco-button],label[for="Pagamento-button"]{
+label[for=endereco-button],label[for="pagamento-button"]{
     display: inline-block;
     width: 100%;
     text-align: left;
